MDEV-26844: DELETE returns ROW_NUMBER=1 for every row upon ER_TRUNCATED_WRONG_VALUE

Analysis: m_current_row_for_warning doesn't increment and assumes default
value which is then used by ROW_NUMBER.
Fix: Increment m_current_row_for_warning for each processed row.
For DELETE with ORDER BY, introduced a a new
variable(modify_m_current_row_for_warning) which when true increments counter.
It is set to true when object of Filesort class is created for DELETE and
false everywhere else to avoid getting strange results for other statements
example SELECT.