sql/filesort.cc
@@ -45,7 +45,8 @@ static ha_rows find_all_keys(THD *thd, Sort_param *param, SQL_SELECT *select,
                              IO_CACHE *buffer_file,
                              IO_CACHE *tempfile,
                              Bounded_queue<uchar, uchar> *pq,
-                             ha_rows *found_rows);
+                             ha_rows *found_rows,
+                             bool modify_m_current_row_for_warning);
 static bool write_keys(Sort_param *param, SORT_INFO *fs_info,
                       uint count, IO_CACHE *buffer_file, IO_CACHE *tempfile);
 static uint make_sortkey(Sort_param *param, uchar *to, uchar *ref_pos,
@@ -359,7 +360,8 @@ SORT_INFO *filesort(THD *thd, TABLE *table, Filesort *filesort,
                           &buffpek_pointers,
                           &tempfile, 
                           pq.is_initialized() ? &pq : NULL,
-                          &sort->found_rows);
+                          &sort->found_rows,
+                          filesort->modify_m_current_row_for_warning);
   if (num_rows == HA_POS_ERROR)
     goto err;
 
@@ -833,7 +835,8 @@ static ha_rows find_all_keys(THD *thd, Sort_param *param, SQL_SELECT *select,
                              IO_CACHE *buffpek_pointers,
                              IO_CACHE *tempfile,
                              Bounded_queue<uchar, uchar> *pq,
-                             ha_rows *found_rows)
+                             ha_rows *found_rows,
+                             bool modify_m_current_row_for_warning)
 {
   int error, quick_select;
   uint idx, indexpos;
@@ -906,6 +909,9 @@ static ha_rows find_all_keys(THD *thd, Sort_param *param, SQL_SELECT *select,
 
   for (;;)
   {
+    if (modify_m_current_row_for_warning)
+     thd->get_stmt_da()->inc_current_row_for_warning();
+
     if (quick_select)
       error= select->quick->get_next();
     else					/* Not quick-select */
@@ -996,6 +1002,8 @@ static ha_rows find_all_keys(THD *thd, Sort_param *param, SQL_SELECT *select,
     if (!write_record)
       file->unlock_row();
   }
+  if (modify_m_current_row_for_warning)
+     thd->get_stmt_da()->reset_current_row_for_warning(0);
   if (!quick_select)
   {
     (void) file->extra(HA_EXTRA_NO_CACHE);	/* End caching of records */
